# cuisiner

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
assert_layout/: Cargo.toml
assert_layout/src/: analyse.rs  codegen.rs  lib.rs  lower.rs  parse.rs
assert_layout/src/analyse/: mod.rs  qualify.rs  util.rs
assert_layout/tests/: simple.rs
cuisiner_derive/: Cargo.toml  README.md
cuisiner_derive/src/: analyse.rs  codegen.rs  lib.rs  lower.rs  parse.rs
cuisiner_derive/tests/: generics.rs  simple.rs
src/: lib.rs
src/implementations/: array.rs  mod.rs  number.rs
src/util/: boolean.rs  const_value.rs  mod.rs  reserved.rs
tests/: sqlite-header.rs
