[package]
name = "cuisiner"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Cook up some conversions to and from C-style binary layouts."
repository.workspace = true
license.workspace = true

keywords.workspace = true
categories.workspace = true

[workspace]
resolver = "2"
members = ["cuisiner_derive"]

[workspace.package]
version = "0.0.4"
edition = "2024"
authors = ["Tom Anderson <tom@ando.sh>"]
repository = "https://github.com/andogq/cuisiner"
license = "MIT OR Apache-2.0"

keywords = ["binary-encoding", "binary-format", "c", "convert", "serialization"]
categories = ["encoding", "parsing", "rust-patterns"]

[workspace.dependencies]
cuisiner = { path = "." }
cuisiner_derive = { path = "cuisiner_derive", version = "0.0.4" }

[dependencies]
thiserror = "2.0.12"
zerocopy = { version = "0.8.24", features = ["derive", "std"] }
cuisiner_derive = { workspace = true }
assert_layout = "0.0.1"

[dev-dependencies]
proptest = "1.6.0"
