[package]
name = "assert_layout"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
syn = { version = "2.0.100", features = ["full"] }

[dev-dependencies]
syn = { version = "2.0.100", features = ["full", "extra-traits"] }
