[package]
name = "cuisiner_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
strum = { version = "0.27.1", features = ["derive"] }
syn = { version = "2.0.100", features = ["full"] }

[dev-dependencies]
cuisiner = { workspace = true }
