[package]
name = "cuisiner_derive"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Derive macros to support cuisiner"
repository.workspace = true
license.workspace = true

keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.94"
quote = "1.0.40"
strum = { version = "0.27.1", features = ["derive"] }
syn = { version = "2.0.100", features = ["full"] }

[dev-dependencies]
cuisiner = { workspace = true }
